--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
     "react-bootstrap": "^2.10.1",
+    "react-fontawesome": "^1.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
